[package]
name = "griddb_rust_client_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
griddb-sys = { version = "5.0.0", path = "griddb-sys" }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
tuple-conv = "1.0.1"